[package]
name = "jamkit"
version = "0.2.5"
description = "A small game development library."
homepage = "https://github.com/athena-org/jamkit"
repository = "https://github.com/athena-org/jamkit"
authors = ["Layl Conway"]
license = "MIT"

[dependencies]
cgmath = "0.4.0"
glium = "0.13.2"
image = "0.3.9" # Use what glium uses
time = "0.1.33"
