[package]
name = "jamkit"
version = "0.3.0"
description = "A small game development library."
homepage = "https://github.com/athena-org/jamkit"
repository = "https://github.com/athena-org/jamkit"
authors = ["Layl Conway"]
license = "MIT"

[dependencies]
cgmath = "0.7"
glium = "0.13"
image = "0.6"
time = "0.1"
